--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,9 +22,16 @@ jobs:
 
       - name: Build Next.js App
         run: npm run build                                         # :contentReference[oaicite:9]{index=9}
-      - name: Deploy to Azure Web App
-        uses: azure/webapps-deploy@v3                               # :contentReference[oaicite:10]{index=10}
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v3
         with:
-          app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: .
+          push: true
+          tags: gcr.io/${{ secrets.GCP_PROJECT_ID }}/nextjs-app:latest
+
+      - name: Deploy to Cloud Run
+        run: |
+          gcloud run deploy nextjs-app \
+            --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/nextjs-app:latest \
+            --region ${{ secrets.GCP_REGION }} \
+            --platform managed \
+            --allow-unauthenticated                              # :contentReference[oaicite:12]{index=12}
