--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,16 +22,9 @@ jobs:
 
       - name: Build Next.js App
         run: npm run build                                         # :contentReference[oaicite:9]{index=9}
-      - name: Build and Push Docker Image
-        uses: docker/build-push-action@v3
+      - name: Deploy to Vercel
+        uses: amondnet/vercel-action@v20                          # :contentReference[oaicite:13]{index=13}
         with:
-          push: true
-          tags: gcr.io/${{ secrets.GCP_PROJECT_ID }}/nextjs-app:latest
-
-      - name: Deploy to Cloud Run
-        run: |
-          gcloud run deploy nextjs-app \
-            --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/nextjs-app:latest \
-            --region ${{ secrets.GCP_REGION }} \
-            --platform managed \
-            --allow-unauthenticated                              # :contentReference[oaicite:12]{index=12}
+          vercel-token: ${{ OsFijRWjz2ZtRd0HDGoYhnUb }}
+          vercel-args: "--prod"
+          working-directory: .
